# supercomparateca

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
Docs/: runbook-produccion.md  spec-comparador-precios.md
infra/ansible/: README.md  ansible.cfg  deploy.yml  inventory.example.ini  provision.yml  requirements.yml
infra/ansible/group_vars/: all.yml.example
infra/ansible/roles/base/handlers/: main.yml
infra/ansible/roles/base/tasks/: main.yml
scripts/: backup-db.sh  deploy.sh  healthcheck.sh  verificar-dns.sh  verificar-tls.sh
services/api/: .dockerignore  Dockerfile  README.md  behave.ini  pyproject.toml
services/api/app/: asociacion.py  config.py  consultas.py  database.py  main.py  matching.py  models.py  ocr.py  parsing.py  schemas.py  seguridad.py
services/api/app/routers/: auth.py  cesta.py  lineas.py  productos.py  supermercados.py  tickets.py
services/api/features/: auth.feature  environment.py  matching.feature  multiusuario.feature  precios.feature  tickets.feature
services/api/features/steps/: pasos.py
services/api/tests/: conftest.py  test_asociacion.py  test_auth.py  test_cesta.py  test_consultas.py  test_matching.py  test_multiusuario.py  test_parsing.py  test_productos.py  test_supermercados.py  test_tickets.py
services/frontend/: Dockerfile  README.md  app.js  index.html  styles.css
services/ocr-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/ocr-service/app/: main.py  ocr.py
services/ocr-service/tests/: test_ocr.py
(+2 files in other folders)
